@startuml Reset Password
skinparam classAttributeIconSize 0

package "API" {
    class AuthController {
        +ResetPassword(command: ResetPasswordCommand): Task<IActionResult>
    }
}

package "Application" {
    class ResetPasswordCommand {
        +Email: string
        +Token: string
        +NewPassword: string
    }

    class ResetPasswordCommandHandler {
        -identityService: IIdentityService
        +Handle(request: ResetPasswordCommand): Task<ErrorOr<Success>>
    }

    interface IIdentityService {
        +ResetPassword(request: ResetPasswordRequest): Task<ErrorOr<Success>>
    }
}

package "Infrastructure" {
    class IdentityService {
        -userRepository: IUserRepository
        -resetTokenRepository: IPasswordResetTokenRepository
        -passwordHasher: IPasswordHasher
        +ResetPassword(request: ResetPasswordRequest): Task<ErrorOr<Success>>
    }
}

package "Domain" {
    class UserEntity {
        +Id: Guid
        +Password: string
    }
}

AuthController ..> ResetPasswordCommand : uses
ResetPasswordCommand ..> ResetPasswordCommandHandler : handled by
ResetPasswordCommandHandler --> IIdentityService : calls
IIdentityService <|.. IdentityService : implements
IdentityService --> UserEntity : updates
@enduml
